--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -14,7 +14,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: red;
+  color: #000;
 }
 
 html,
@@ -22,4 +22,4 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
+ */
