--- a/app/globals.css
+++ b/app/globals.css
@@ -22,3 +22,36 @@ body {
   overflow-x: hidden;
 }
 
+.slide-side {
+  -webkit-animation: slide-side 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: slide-side 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes slide-side {
+  0% {
+    -webkit-transform: translateX(-25%);
+            transform: translateX(-25%);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes slide-side {
+  0% {
+    -webkit-transform: translateX(-25%);
+            transform: translateX(-25%);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+.color-code-1 { 
+  background: linear-gradient(90deg, #EFBB9D 0%, rgba(255, 201, 170, 0.7) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
