--- a/app/globals.css
+++ b/app/globals.css
@@ -22,82 +22,6 @@ body {
   overflow-x: hidden;
 }
 
-.slide-side {
-  animation: slide-in 0.5s forwards;
-}
-
-
-@keyframes slide-in {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(0%);
-  }
-}
-
-.slide-side-out {
-  animation: slide-out 0.5s forwards;
-}
-
-@keyframes slide-out {
-  from {
-    transform: translateX(0%);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-
-
-.color-code-1 { 
-  background: linear-gradient(90deg, #EFBB9D 0%, rgba(255, 201, 170, 0.7) 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
-}
-
-.skills__bar{
-    height: 2px;
-}
-.skills__bar {
-    background: rgba(255, 255, 255, 0.2);
-}
-
-.line {
-  position: relative;
-}
- .line h3::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-    background-color:#8e908d;
-    height: 2px;
-    box-sizing: border-box;
-    width: 90%;
-    margin-left: 70px;
-}
-
-.skills__bar,
-.skills__percentage {
-    height: 2px;
-}
-.skills__bar {
-    background: rgba(255, 255, 255, 0.2);
-}
-.skills__percentage {
-    display: block;
-    background-color: #82097b;
-    position: relative;
-}
-.collection-title {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  row-gap: 20px;
-  column-gap: 40px;
-  margin-bottom: 60px;
-}
+/* .menu  {
+  @apply 
+} */
